--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,54 +1,28 @@
-pipeline{
-    agent any
-    tools{
-        maven 'mvn3.9.9'
-    }
-        environment{
-        DOCKER_IMAGE='simplybyte-calculator-jenkins-local'
-        CONTAINER_NAME='simplybyte-container-calculator'
-    }
-    parameters{
-            choice(name: 'ENVIRONMENT' , choices: ['testing','prod'], description: 'environemnt')
-    }
-    stages{
-        stage('git clone'){
-            steps{
-                git branch: 'main', credentialsId: 'github_simplybyte_credentials', url: 'https://github.com/simplybyte1266/simplybyte-springboot.git'
+pipeline {
+    agent any // Specifies where the pipeline will run, 'any' means on any available agent
+    stages {
+        stage('Checkout') { // Stage 1: Pull code from a repository
+            steps {
+                // In a real scenario, this step would use 'git' to clone a repository
+                echo 'Checking out source code...'
             }
         }
-        stage('print path'){
-            steps{
-                sh 'echo $PATH'
+        stage('Build') { // Stage 2: Compile the project
+            steps {
+                // Example for a Maven project: sh 'mvn clean install'
+                echo 'Building the application...'
             }
         }
-        stage('maven test stage'){
-            when{
-                expression{
-                    params.ENVIRONMENT == 'testing'
-                }
-            }
-            steps{
-                sh 'mvn test'
+        stage('Test') { // Stage 3: Run tests
+            steps {
+                // Example for running tests: sh 'mvn test'
+                echo 'Running unit tests...'
             }
         }
-        stage('maven build stage'){
-            steps{
-                sh 'mvn clean install -DskipTests=true'
-            }
-        }
-        stage('Docker image build'){
-            steps{
-                sh 'docker build -t $DOCKER_IMAGE:$BUILD_NUMBER .'
-            }
-        }
-        stage('Docker old container remove'){
-            steps{
-                sh 'docker rm -f $CONTAINER_NAME || true'
-            }
-        }
-        stage('Docker new container run'){
-            steps{
-                sh 'docker run -d -p 8091:8090 --name=$CONTAINER_NAME $DOCKER_IMAGE:$BUILD_NUMBER'
+        stage('Deploy') { // Stage 4: Deploy the application
+            steps {
+                // Example for deploying: sh 'ansible-playbook -i inventory/prod site.yml'
+                echo 'Deploying the application to a server...'
             }
         }
     }
